Add header files

--- a/C++/Polymorphysm/Polymorphysm/Polymorphysm.vcxproj
+++ b/C++/Polymorphysm/Polymorphysm/Polymorphysm.vcxproj
@@ -129,6 +129,11 @@
   <ItemGroup>
     <ClCompile Include="Polymorphysm.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Equations.h" />
+    <ClInclude Include="File.h" />
+    <ClInclude Include="Shapes.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
